Formula typo fix

--- a/formula_builder.html
+++ b/formula_builder.html
@@ -314,7 +314,7 @@
   <script type="text/babel">
     function App() {
       const textareaRef = React.useRef(null);
-      const [formula, setFormula] = React.useState('!');
+      const [formula, setFormula] = React.useState('');
       const [args, setArgs] = React.useState([]);
       const [service, setService] = React.useState('ec2');
       const tooltipRef = React.useRef(null);
