Add max width to dropdown checkbox menu

--- a/formula_builder.html
+++ b/formula_builder.html
@@ -236,6 +236,7 @@
     .dropdown-check-list .anchor {
       position: relative;
       cursor: pointer;
+      max-width: 170px;
       display: inline-block;
       padding: 5px 50px 5px 10px;
       border: 1px solid #ccc;
