--- a/formula_builder.html
+++ b/formula_builder.html
@@ -618,7 +618,7 @@
       const offeringClasses = ["standard","convertible"];
       const purchaseTerms = ["1yr", "3yr"];
       const paymentOptions = ["no_upfront", "partial_upfront", "all_upfront"];
-      const sqlLicenses = ["std", "web", "enterprise", "no sql license"]
+      const sqlLicenses = ["no sql license", "std", "web", "enterprise"]
 
       React.useEffect(() => {
         handleChange();
