Use 'no sql license' as argument in EC2 reserved instance to indicate that there is no sql license, and show this in compare functionality in formula builder

--- a/formula_builder.html
+++ b/formula_builder.html
@@ -644,9 +644,9 @@
         if(purchaseType === 'reserved')
           args = args.concat([offeringClass, purchaseTerm, paymentOption])
 
-        const filteredSqlLicense = sqlLicense.split("/").map(x => x === "no sql license" ? "" : x).join("/")
-        if(filteredSqlLicense)
-          args = args.concat(filteredSqlLicense);
+        if(sqlLicense !== "no sql license")
+          args = args.concat(sqlLicense);
+
         return args;
       }
 
