Use rem in formula builder, and scale back from 16px to 15px

--- a/formula_builder.html
+++ b/formula_builder.html
@@ -8,6 +8,10 @@
   <script src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js"></script>
 
   <style>
+    html {
+      font-size: 15px;
+    }
+
     .App {
       width:285px;
       font-family: arial, sans-serif;
@@ -86,7 +90,7 @@
       border: 1px solid #ccc;
       border-radius: 4px;
       padding: 8px;
-      font-size: 16px;
+      font-size: 1rem;
       font-family: Arial, sans-serif;
       color: #555;
       background-color: #fff;
@@ -100,7 +104,7 @@
     }
     option {
       max-width: 150px;
-      font-size: 16px;
+      font-size: 1rem;
       font-family: Arial, sans-serif;
       color: #555;
       background-color: #fff;
@@ -111,7 +115,7 @@
       border: 1px solid #ccc;
       border-radius: 4px;
       padding: 8px;
-      font-size: 16px;
+      font-size: 1rem;
       font-family: Arial, sans-serif;
       color: #555;
       background-color: #fff;
@@ -128,7 +132,7 @@
       border: 1px solid #ccc;
       border-radius: 4px;
       padding: 8px;
-      font-size: 16px;
+      font-size: 1rem;
       font-family: Arial, sans-serif;
       color: #555;
       background-color: #fff;
@@ -142,7 +146,7 @@
       border: 1px solid #ccc;
       border-radius: 4px;
       padding: 8px;
-      font-size: 16px;
+      font-size: 1rem;
       font-family: Arial, sans-serif;
       color: #555;
       background-color: #fff;
@@ -155,7 +159,7 @@
 
     button {
       padding: 8px;
-      font-size: 16px;
+      font-size: 1rem;
       font-family: Arial, sans-serif;
       cursor: pointer;
       transition: background-color 0.3s ease;
@@ -198,7 +202,7 @@
 
     .header {
       font-family: Arial, sans-serif;
-      font-size: 16px;
+      font-size: 1rem;
       font-weight: bold;
       color: #555;
       background-color: #fff;
